# pb-exception-framework

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  build.orcascript  demo.pbt  exf.pbsln  exf.pbw  lib.pb.base.exception-framework.pbproj  tag_push_event.json  version.axpv
analyzer/: exf_analyzer.pbproj  helper.db
assets/: exf_analyzer.xcf
ci/: exf_analyzer.nuspec  replacements.json  replacements.ps1
cpp/: CMakeLists.txt  CMakePresets.json  dllmain.cpp  exf1.def  stacktrace.cpp  stacktrace.hpp
cpp/include/: pbvm.hpp
cpp/lib/: pbshr.def  pbshr.exp  pbshr_x64.def  pbshr_x86.def  pbvm.def  pbvm.exp  pbvm_x64.def  pbvm_x86.def
demo/: demo.pbproj
docs/: README.md
exf1.pbl/: d_exf_keyval_store.srd  exf1.pblmeta  exf1_u_exf_application_adapter.sru  exf1_u_exf_blob.sru  exf1_u_exf_error_creator.sru  exf1_u_exf_error_data.sru  exf1_u_exf_error_manager.sru  exf1_u_exf_ex.sru  exf1_u_exf_ex_io.sru  exf1_u_exf_ex_pbni.sru  exf1_u_exf_ex_webrequest.sru  exf1_u_exf_re.sru  exf1_u_exf_re_database.sru  exf1_u_exf_re_illegalargument.sru  exf1_u_exf_re_invalidstate.sru  exf1_u_exf_re_io.sru  exf1_u_exf_re_notimplemented.sru  exf1_u_exf_re_systemerror.sru  exf1_u_exf_serialization.sru  exf1_w_exf_error_message.srw  exf1_w_exf_send_form.srw  u_exf_application_adapter.sru  u_exf_blob.sru  u_exf_error_creator.sru  u_exf_error_data.sru  u_exf_error_manager.sru  u_exf_ex.sru  u_exf_ex_io.sru  u_exf_ex_pbni.sru  u_exf_ex_webrequest.sru  u_exf_re.sru  u_exf_re_database.sru  u_exf_re_illegalargument.sru  u_exf_re_invalidstate.sru  u_exf_re_io.sru  w_exf_send_form.srw  (+4 more)
(+86 files in other folders)
